Refactoring: page_number to limit/offset
